--- a/projectfiles/CodeBlocks-SCons/wesnothd.cbp
+++ b/projectfiles/CodeBlocks-SCons/wesnothd.cbp
@@ -40,27 +40,40 @@
 			</Target>
 		</Build>
 		<Unit filename="../../src/about.hpp" />
+		<Unit filename="../../src/color.cpp" />
+		<Unit filename="../../src/color.hpp" />
 		<Unit filename="../../src/color_range.cpp" />
 		<Unit filename="../../src/config.cpp" />
 		<Unit filename="../../src/config.hpp" />
+		<Unit filename="../../src/config_attribute_value.cpp" />
+		<Unit filename="../../src/config_attribute_value.hpp" />
 		<Unit filename="../../src/filesystem.cpp" />
 		<Unit filename="../../src/filesystem.hpp" />
+		<Unit filename="../../src/filesystem_common.cpp" />
+		<Unit filename="../../src/filesystem_sdl.cpp" />
 		<Unit filename="../../src/filesystem_win32.ii" />
+		<Unit filename="../../src/font/constants.cpp" />
+		<Unit filename="../../src/font/constants.hpp" />
 		<Unit filename="../../src/game_config.cpp" />
 		<Unit filename="../../src/game_config.hpp" />
+		<Unit filename="../../src/game_version.cpp" />
+		<Unit filename="../../src/game_version.hpp" />
 		<Unit filename="../../src/gettext.cpp" />
 		<Unit filename="../../src/gettext.hpp" />
 		<Unit filename="../../src/global.hpp" />
-		<Unit filename="../../src/loadscreen.hpp" />
-		<Unit filename="../../src/loadscreen_empty.cpp" />
+		<Unit filename="../../src/libc_error.hpp" />
 		<Unit filename="../../src/log.cpp" />
 		<Unit filename="../../src/log.hpp" />
-		<Unit filename="../../src/map.hpp" />
-		<Unit filename="../../src/network.cpp" />
-		<Unit filename="../../src/network.hpp" />
-		<Unit filename="../../src/network_worker.cpp" />
-		<Unit filename="../../src/network_worker.hpp" />
-		<Unit filename="../../src/scoped_resource.hpp" />
+		<Unit filename="../../src/log_windows.cpp" />
+		<Unit filename="../../src/log_windows.hpp" />
+		<Unit filename="../../src/mt_rng.cpp" />
+		<Unit filename="../../src/mt_rng.hpp" />
+		<Unit filename="../../src/random.cpp" />
+		<Unit filename="../../src/random.hpp" />
+		<Unit filename="../../src/seed_rng.cpp" />
+		<Unit filename="../../src/seed_rng.hpp" />
+		<Unit filename="../../src/serialization/base64.cpp" />
+		<Unit filename="../../src/serialization/base64.hpp" />
 		<Unit filename="../../src/serialization/binary_or_text.cpp" />
 		<Unit filename="../../src/serialization/binary_or_text.hpp" />
 		<Unit filename="../../src/serialization/compression.hpp" />
@@ -68,9 +81,17 @@
 		<Unit filename="../../src/serialization/parser.hpp" />
 		<Unit filename="../../src/serialization/preprocessor.cpp" />
 		<Unit filename="../../src/serialization/preprocessor.hpp" />
+		<Unit filename="../../src/serialization/schema/key.cpp" />
+		<Unit filename="../../src/serialization/schema/key.hpp" />
+		<Unit filename="../../src/serialization/schema/tag.cpp" />
+		<Unit filename="../../src/serialization/schema/tag.hpp" />
+		<Unit filename="../../src/serialization/schema/type.cpp" />
+		<Unit filename="../../src/serialization/schema/type.hpp" />
 		<Unit filename="../../src/serialization/string_utils.cpp" />
 		<Unit filename="../../src/serialization/string_utils.hpp" />
+		<Unit filename="../../src/serialization/string_view.hpp" />
 		<Unit filename="../../src/serialization/tokenizer.cpp" />
+		<Unit filename="../../src/serialization/tokenizer.hpp" />
 		<Unit filename="../../src/serialization/unicode.cpp" />
 		<Unit filename="../../src/serialization/unicode.hpp" />
 		<Unit filename="../../src/server/ban.cpp" />
@@ -79,36 +100,28 @@
 		<Unit filename="../../src/server/forum_user_handler.hpp" />
 		<Unit filename="../../src/server/game.cpp" />
 		<Unit filename="../../src/server/game.hpp" />
-		<Unit filename="../../src/server/input_stream.cpp" />
-		<Unit filename="../../src/server/input_stream.hpp" />
 		<Unit filename="../../src/server/metrics.cpp" />
 		<Unit filename="../../src/server/metrics.hpp" />
 		<Unit filename="../../src/server/player.cpp" />
 		<Unit filename="../../src/server/player.hpp" />
+		<Unit filename="../../src/server/player_connection.cpp" />
+		<Unit filename="../../src/server/player_connection.hpp" />
 		<Unit filename="../../src/server/player_network.cpp" />
 		<Unit filename="../../src/server/player_network.hpp" />
-		<Unit filename="../../src/server/proxy.cpp" />
-		<Unit filename="../../src/server/proxy.hpp" />
-		<Unit filename="../../src/server/room.cpp" />
 		<Unit filename="../../src/server/room.hpp" />
-		<Unit filename="../../src/server/room_manager.cpp" />
-		<Unit filename="../../src/server/room_manager.hpp" />
 		<Unit filename="../../src/server/sample_user_handler.cpp" />
 		<Unit filename="../../src/server/sample_user_handler.hpp" />
 		<Unit filename="../../src/server/server.cpp" />
 		<Unit filename="../../src/server/server.hpp" />
+		<Unit filename="../../src/server/server_base.cpp" />
+		<Unit filename="../../src/server/server_base.hpp" />
 		<Unit filename="../../src/server/simple_wml.cpp" />
 		<Unit filename="../../src/server/simple_wml.hpp" />
 		<Unit filename="../../src/server/user_handler.cpp" />
 		<Unit filename="../../src/server/user_handler.hpp" />
-		<Unit filename="../../src/thread.cpp" />
-		<Unit filename="../../src/thread.hpp" />
 		<Unit filename="../../src/tstring.cpp" />
 		<Unit filename="../../src/tstring.hpp" />
-		<Unit filename="../../src/util.cpp" />
 		<Unit filename="../../src/util.hpp" />
-		<Unit filename="../../src/game_version.cpp" />
-		<Unit filename="../../src/game_version.hpp" />
 		<Unit filename="../../src/wesconfig.h" />
 		<Extensions>
 			<code_completion />
