--- a/data/scenario-test.cfg
+++ b/data/scenario-test.cfg
@@ -324,7 +324,7 @@ Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg
         [unit]
             # A unit whose portrait is only shown on the right side.
             x,y=18,11
-            type="White Mage"
+            type="Mage of Light"
             gender="female"
             generate_name=yes
         [/unit]
@@ -351,6 +351,8 @@ Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg
                                 female_name= "female^darkens"
                                 description= "darkens and stuff"
                                 affect_self=yes
+				[affect_adjacent]
+				[/affect_adjacent]
                             [/illuminates]
                         [/abilities]
                     [/effect]
