--- a/data/scenario-test.cfg
+++ b/data/scenario-test.cfg
@@ -874,6 +874,56 @@ Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg
             x,y=21,7
             type="Lich"
             generate_name=yes
+	    [modifications]
+                [object]
+                    [effect]
+                        apply_to=new_ability
+                            [abilities]
+                                [heals]
+				    sub=4
+				    id=aura of death 4
+				    affect_enemies=yes
+				    name= _ "aura of death ("4")"
+				    female_name= _ "female^aura of death ("4")"
+				    affect_self=no
+				    affect_allies=no
+				    poison=slowed
+				    [affect_adjacent]
+				        adjacent=n,ne,se,s,sw,n
+				    [/affect_adjacent]
+                                [/heals]
+                            [/abilities]
+                    [/effect]
+                [/object]
+            [/modifications]
+        [/unit]
+	[unit]
+            # reverse heals tester
+            x,y=20,6
+            type="Ancient Lich"
+            generate_name=yes
+	    [modifications]
+                [object]
+                    [effect]
+                        apply_to=new_ability
+                            [abilities]
+                                [heals]
+				    sub=8
+				    id=aura of death 8
+				    affect_enemies=yes
+				    name= _ "aura of death ("8")"
+				    female_name= _ "female^aura of death ("8")"
+				    affect_self=no
+				    affect_allies=no
+				    poison=slowed
+				    [affect_adjacent]
+				        adjacent=n,ne,se,s,sw,n
+				    [/affect_adjacent]
+                                [/heals]
+                            [/abilities]
+                    [/effect]
+                [/object]
+            [/modifications]
         [/unit]
         [unit]
             # Drain tester
