--- a/data/schema/units/abilities.cfg
+++ b/data/schema/units/abilities.cfg
@@ -35,6 +35,8 @@
 	max=infinite
 	super="units/unit_type/abilities/~generic~"
 	{SIMPLE_KEY value f_int}
+	{SIMPLE_KEY add f_int}
+	{SIMPLE_KEY sub f_int}
 	{SIMPLE_KEY poison string} # TODO: Enum
 [/tag]
 [tag]
