Help: Document campaign 'level' and 'difficulty'.

--- a/data/gui/window/campaign_difficulty.cfg
+++ b/data/gui/window/campaign_difficulty.cfg
@@ -70,7 +70,7 @@
 					[scroll_label]
 						id = "message"
 						definition = "default"
-						label = _ "Select difficulty level:"
+						label = _ "Select difficulty:"
 					[/scroll_label]
 
 				[/column]
