--- a/data/core/help.cfg
+++ b/data/core/help.cfg
@@ -173,7 +173,9 @@ This unit is unknown for the moment. You must discover it in the game to be allo
 
 The interactive <bold>text='Tutorial'</bold> introduces the basics of Wesnoth gameplay in the context of a scenario. Most material covered in the tutorial is explained more in-depth in these pages, so you can always refer back here if you forget something.
 
-After you master the basics, try out a beginner campaign, such as <italic>text='Heir to the Throne'</italic> or <italic>text='The South Guard'</italic>. A full list of installed campaigns can be found via the <bold>text='Campaign'</bold> option on the main menu. As Wesnoth can be quite challenging, you may wish to start on easy before progressing to higher difficulties." + "
+After you master the basics, try out a beginner campaign, such as <italic>text='Heir to the Throne'</italic> or <italic>text='The South Guard'</italic>. A full list of installed campaigns can be found via the <bold>text='Campaign'</bold> option on the main menu. As Wesnoth can be quite challenging, you may wish to start on easy before progressing to higher difficulties.
+
+Campaigns are grouped by <italic>text='level'</italic> and <italic>text='difficulty'</italic>. For example, <italic>text='Heir to the Throne'</italic> is ‘Rookie’ level, and is playable at three difficulties: ‘Beginner’, ‘Normal’, and ‘Challenging’. The level of a campaign indicates what degree of proficiency in the game mechanics (such as <ref>dst='movement' text='zones of control'</ref> and <ref>dst='time_of_day' text='time of day'</ref>) is assumed. The difficulty indicates how challenging the scenarios will be to a veteran player: at higher difficulties, the obstacles to victory will be higher and overcoming them will require more skillful play." + "
 
 <img>src=help/tooltip.png align=right float=yes</img>" +
             _ "While playing, keep in mind that you can mouse-over many items in the game, such as the information displayed in the status pane, to see a brief description explaining each item. This is especially useful when you encounter new elements, such as <ref>dst='..abilities_section' text='abilities'</ref>, for the first time." + _ "
