Fix for WML schema validation.

--- a/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
+++ b/data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg
@@ -75,12 +75,12 @@
         {MASKED_DWARF (Dwarvish Masked Dragonguard)    54 21}
         {MASKED_DWARF (Dwarvish Masked Dragonguard)    54 23}
 
-        {NOTRAIT_UNIT () "Draug" 56 18} {GUARDIAN} {NO_UPKEEP}
-        {NOTRAIT_UNIT () "Banebow" 56 19} {GUARDIAN} {NO_UPKEEP}
-        {NOTRAIT_UNIT () "Draug" 57 20} {GUARDIAN} {NO_UPKEEP}
-        {NOTRAIT_UNIT () "Draug" 57 25} {GUARDIAN} {NO_UPKEEP}
-        {NOTRAIT_UNIT () "Banebow" 56 25} {GUARDIAN} {NO_UPKEEP}
-        {NOTRAIT_UNIT () "Draug" 56 26} {GUARDIAN} {NO_UPKEEP}
+        {NOTRAIT_UNIT 2 "Draug" 56 18} {GUARDIAN} {NO_UPKEEP}
+        {NOTRAIT_UNIT 2 "Banebow" 56 19} {GUARDIAN} {NO_UPKEEP}
+        {NOTRAIT_UNIT 2 "Draug" 57 20} {GUARDIAN} {NO_UPKEEP}
+        {NOTRAIT_UNIT 2 "Draug" 57 25} {GUARDIAN} {NO_UPKEEP}
+        {NOTRAIT_UNIT 2 "Banebow" 56 25} {GUARDIAN} {NO_UPKEEP}
+        {NOTRAIT_UNIT 2 "Draug" 56 26} {GUARDIAN} {NO_UPKEEP}
 
         [ai]
             passive_leader=yes
