--- a/data/gui/window/unit_recruit.cfg
+++ b/data/gui/window/unit_recruit.cfg
@@ -132,23 +132,6 @@
 		[/helptip]
 
 		[grid]
-			[row]
-				grow_factor = 0
-
-				[column]
-					grow_factor = 1
-					border = "all"
-					border_size = 5
-					horizontal_alignment = "left"
-
-					[label]
-						definition = "title"
-						label = _ "Recruit Unit"
-					[/label]
-
-				[/column]
-
-			[/row]
 
 			[row]
 				grow_factor = 1
@@ -158,6 +141,35 @@
 					vertical_grow = true
 
 					[grid]
+
+						[row]
+
+							[column]
+								grow_factor = 1
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+
+								[label]
+									definition = "title"
+									label = _ "Recruit Unit"
+								[/label]
+
+							[/column]
+
+							[column]
+								border = "all"
+								border_size = 5
+								horizontal_alignment = "left"
+
+								[text_box]
+									id = "filter_box"
+									definition = "default"
+									{FITER_TEXT_BOX_HINT}
+								[/text_box]
+
+							[/column]
+						[/row]
 
 						[row]
 							[column]
