--- a/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg
@@ -346,11 +346,7 @@
                 [show_objectives][/show_objectives]
             [/then]
             [else]
-                [endlevel]
-                    result=victory
-                    bonus=no
-                    {NEW_GOLD_CARRYOVER 40}
-                [/endlevel]
+                [show_objectives][/show_objectives]
             [/else]
         [/if]
     [/event]
@@ -380,35 +376,27 @@
         [/kill]
     [/event]
 
-    # Defeat Conditions
     [event]
         name=die
         [filter]
             side=3,4
+            [not]
+                id=Drogan
+            [/not]
         [/filter]
         [filter_second]
             side=1
         [/filter_second]
+        [filter_condition]
+            [not]
+                {DID_RTP_HAS_DROGAN}
+            [/not]
+        [/filter_condition]
 
-        [if]
-            {DID_RTP_HAS_DROGAN}
-            [then]
-                [message]
-                    speaker=Malin Keshar
-                    message= _ "Now the people of Parthyn will never accept me back!"
-                [/message]
-
-                [endlevel]
-                    result=defeat
-                [/endlevel]
-            [/then]
-            [else]
-                [message]
-                    speaker=Malin Keshar
-                    message= _ "See how you die when you spurn the help of Malin Keshar!"
-                [/message]
-            [/else]
-        [/if]
+        [message]
+            speaker=Malin Keshar
+            message= _ "See how you die when you spurn the help of Malin Keshar!"
+        [/message]
     [/event]
 
     # Victory Conditions
