use pkg-config instead freetype-config
freetype-config has been removed from freetype earlier this year

compiling iwth gcc 4.3 works, and fails with >=4.5 and clang

At least on Archlinux one must provide the option --with-freetype-prefix=/usr/lib

As this is an old version of wesnoth, options such as --with-preferences-dir,
--program-suffix, --with-datadir-name and --docdir are useful to avoid collisions
with other wesnoth versions. For more, see ./configure --help.

--- a/configure.ac
+++ b/configure.ac
@@ -642,8 +642,8 @@ if test "$FREETYPE_CONFIG" = "no" ; then
 *** Unable to find FreeType2 library (http://www.freetype.org/)
 ])
 else
-    CPPFLAGS="$CPPFLAGS `$FREETYPE_CONFIG $freetypeconf_args --cflags`"
-    FREETYPE_LIBS=`$FREETYPE_CONFIG $freetypeconf_args --libs`
+    CPPFLAGS="$CPPFLAGS `pkg-config --cflags freetype2`"
+    FREETYPE_LIBS="`pkg-config --libs freetype2`"
 fi
 
 AC_SUBST([FREETYPE_LIBS])
