EI S2: minor shroud and dialogue changes

--- a/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
+++ b/data/campaigns/Eastern_Invasion/scenarios/02_The_Escape_Tunnel.cfg
@@ -282,6 +282,23 @@
             side=1
         [/filter_second]
 
+        [remove_shroud]
+            side=1
+            x,y=8-30,2-10
+        [/remove_shroud]
+        [remove_shroud]
+            side=1
+            x,y=31-36,4-10
+        [/remove_shroud]
+        [remove_shroud]
+            side=1
+            x,y=37-38,4-5
+        [/remove_shroud]
+        [modify_side]
+            side=3
+            share_vision=all
+        [/modify_side]
+
         [message]
             speaker=unit
             message= _ "Who goes there?"
@@ -320,25 +337,8 @@
 
         [message]
             speaker=Dacyn
-            message= _ "Very well. The best of luck in your battle. Gweddry, we may be able to avoid the bulk of the trolls by going through the dwarves' base."
+            message= _ "Very well. The best of luck in your battle. Gweddry, we may be able to avoid the bulk of the trolls by going through the dwarves’ tunnel."
         [/message]
-
-        [remove_shroud]
-            side=1
-            x,y=8-30,2-10
-        [/remove_shroud]
-        [remove_shroud]
-            side=1
-            x,y=31-36,4-10
-        [/remove_shroud]
-        [remove_shroud]
-            side=1
-            x,y=37-38,4-5
-        [/remove_shroud]
-        [modify_side]
-            side=3
-            share_vision=all
-        [/modify_side]
     [/event]
 
     {HOLY_AMULET 12 2}
