TRoW S2: moved unit variable storage

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg
@@ -351,19 +351,9 @@
 
                     {FULL_HEAL (id=Lady Outlaw)}
 
-                    [store_unit]
-                        [filter]
-                            id=Wesfolk Leader
-                        [/filter]
-
-                        kill=yes
-                        variable=lady_store
-                    [/store_unit]
-
-                    {VARIABLE lady_store.id (Lady Outlaw)}
-                    {VARIABLE lady_store.name ( _ "Lady Outlaw")}
-                    {VARIABLE lady_store.canrecruit no}
-                    {VARIABLE lady_store.side 1}
+                    [hide_unit]
+                        id=Wesfolk Leader
+                    [/hide_unit]
 
                     [set_variable]
                         name=have_lady
@@ -466,6 +456,19 @@
         [/kill]
 
         {CLEAR_VARIABLE wesfolk_leader_store}
+
+        [store_unit]
+            [filter]
+                id=Wesfolk Leader
+            [/filter]
+
+            variable=lady_store
+        [/store_unit]
+
+        {VARIABLE lady_store.id (Lady Outlaw)}
+        {VARIABLE lady_store.name ( _ "Lady Outlaw")}
+        {VARIABLE lady_store.canrecruit no}
+        {VARIABLE lady_store.side 1}
     [/event]
 [/scenario]
 
