TRoW S5: moved unit variable storage

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg
@@ -388,13 +388,6 @@
                     speaker=Lady Outlaw
                     message= _ "We should save the debate for later. I can still be of use to you. I shall scout the road ahead. We need to know if we can make it to Southbay. I’ll return in a few days."
                 [/message]
-                [store_unit]
-                    [filter]
-                        id=Lady Outlaw
-                    [/filter]
-                    variable=lady_store
-                    kill=yes
-                [/store_unit]
             [/then]
         [/if]
 
@@ -412,5 +405,25 @@
             message= _ "We have run out of time... We’ll be trapped in these woods until we die!"
             image=portraits/haldric-mad.png
         [/message]
+    [/event]
+
+    [event]
+        name=victory
+
+        [if]
+            [variable]
+                name=have_lady
+                numerical_equals=1
+            [/variable]
+            [then]
+                [store_unit]
+                    [filter]
+                        id=Lady Outlaw
+                    [/filter]
+                    variable=lady_store
+                    kill=yes
+                [/store_unit]
+            [/then]
+        [/if]
     [/event]
 [/scenario]
