Liberty S2: modified ai gold and start location

--- a/data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg
+++ b/data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg
@@ -36,6 +36,7 @@
         side=2
         canrecruit=yes
         controller=ai
+        gold=0
         team_name=bad_guys
         user_team_name=_"Asheviere"
         [ai]
@@ -184,6 +185,8 @@
 
         {GENERIC_UNIT 2 Spearman 18 7}
         {MOVE_UNIT x,y=18,7 20 7}
+
+        {MOVE_UNIT id=Tarwen 12 8}
 
         [message]
             speaker=Baldras
