SoF S5: made objective clearer

--- a/data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg
@@ -133,6 +133,11 @@
 
     {SOF_DEATHS}
 
+    [label]
+        x,y=19,17
+        text= _ "Shorbear caves"
+    [/label]
+
     [event]
         name=prestart
         [objectives]
@@ -147,7 +152,7 @@
                 [/show_if]
             [/objective]
             [objective]
-                description= _ "Have all heroes in the Shorbear caves while no enemies are in the caves"
+                description= _ "Have all heroes, and no enemies, in the Shorbear caves"
                 condition=win
                 [show_if]
                     {VARIABLE_CONDITIONAL elves_come boolean_equals yes}
