--- a/data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg
@@ -46,7 +46,7 @@
 #define WINTERENEMY X Y
     [set_variable]
         name=typeofenemy
-        rand=Wolf,Ogre,Troll,Wose
+        rand=Wolf,Ogre,Troll,Troll Whelp
     [/set_variable]
     [unit]
         x,y={X},{Y}
