SoF S6: added elven guards

--- a/data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg
@@ -83,7 +83,7 @@
         canrecruit=yes
         recruit=Elvish Rider,Elvish Hero,Elvish Marksman,Elvish Ranger,Elvish Druid
 
-        {GOLD 250 300 350}
+        {GOLD 225 275 325}
         team_name=elves
         user_team_name= _ "Elves"
         [ai]
@@ -120,7 +120,7 @@
         side=4
         canrecruit=yes
         recruit=Elvish Scout,Elvish Fighter,Elvish Archer,Elvish Shaman
-        {GOLD 150 200 250}
+        {GOLD 100 150 200}
         team_name=elves
         user_team_name= _ "Elves"
         [ai]
@@ -229,6 +229,14 @@
                 carryover_percentage=40
             [/gold_carryover]
         [/objectives]
+
+        {LOYAL_UNIT 2 "Elvish Ranger" 5 25} {GUARDIAN}
+        {LOYAL_UNIT 3 "Elvish Hero" 5 7} {GUARDIAN}
+        {LOYAL_UNIT 3 "Elvish Ranger" 11 5} {GUARDIAN}
+        {LOYAL_UNIT 3 "Elvish Hero" 19 6} {GUARDIAN}
+        {LOYAL_UNIT 3 "Elvish Captain" 24 6} {GUARDIAN}
+        {LOYAL_UNIT 4 "Elvish Fighter" 31 27} {GUARDIAN}
+        {LOYAL_UNIT 4 "Elvish Archer" 27 30} {GUARDIAN}
     [/event]
 
     [event]
