SoF S1: increased enemy gold

--- a/data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg
@@ -37,7 +37,7 @@
         facing=ne
         profile=portraits/haldric-ii.png
         {RECRUIT (Swordsman,Longbowman,Dragoon,Cavalryman,Red Mage,Mage) (Swordsman,Longbowman,Cavalryman,Red Mage,Mage) (Swordsman,Longbowman,Cavalryman,Mage)}
-        {GOLD 300 250 200}
+        {GOLD 225 200 175}
         team_name=dwarves
         user_team_name= _ "Dwarves"
         [ai]
@@ -85,7 +85,8 @@
         canrecruit=yes
         facing=sw
         {RECRUIT (Elvish Fighter,Elvish Scout,Elvish Archer) (Elvish Fighter,Elvish Scout,Elvish Archer,Elvish Shaman) (Elvish Fighter,Elvish Scout,Elvish Archer,Elvish Shaman)}
-        {GOLD 175 225 250}
+        {GOLD 175 225 275}
+        {INCOME 6 9 12}
         team_name=elves
         user_team_name= _ "Elves"
         [ai]
