SoF S2: increased enemy income and modified ai

--- a/data/campaigns/Sceptre_of_Fire/scenarios/2_Closing_the_Gates.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/2_Closing_the_Gates.cfg
@@ -38,9 +38,14 @@
         canrecruit=yes
         {RECRUIT (Elvish Fighter,Elvish Scout,Elvish Archer,Elvish Shaman) (Elvish Fighter,Elvish Hero,Elvish Scout,Elvish Archer,Elvish Shaman) (Elvish Fighter,Elvish Hero,Elvish Scout,Elvish Archer,Elvish Ranger,Elvish Shaman)}
         {GOLD 200 250 300}
+        {INCOME 12 18 24}
         team_name=elves
         user_team_name= _ "Elves"
         {FLAG_VARIANT wood-elvish}
+        [ai]
+            aggression=1.0
+            caution=0.0
+        [/ai]
     [/side]
 
     [side]
@@ -141,19 +146,20 @@
             side=1
         [/remove_shroud]
 
-        {GENERIC_UNIT 3 "Troll Whelp" 6 3}
-        {GENERIC_UNIT 3 "Troll Whelp" 6 3}
-        {GENERIC_UNIT 3 "Troll Whelp" 6 3}
+        {GENERIC_UNIT 3 "Troll Whelp" 8 3} {GUARDIAN}
+        {GENERIC_UNIT 3 "Troll Whelp" 5 4} {GUARDIAN}
+        {GENERIC_UNIT 3 "Troll Whelp" 10 5} {GUARDIAN}
 
-        {GENERIC_UNIT 3 "Troll Whelp" 30 25}
-        {GENERIC_UNIT 3 "Troll Whelp" 30 25}
-        {GENERIC_UNIT 3 "Troll Whelp" 30 25}
+        {GENERIC_UNIT 3 "Troll Whelp" 27 21} {GUARDIAN}
+        {GENERIC_UNIT 3 "Troll Whelp" 25 23} {GUARDIAN}
+        {GENERIC_UNIT 3 "Troll Whelp" 25 20} {GUARDIAN}
 
 #ifdef HARD
-        {GENERIC_UNIT 3 "Troll Whelp" 30 25}
+        {GENERIC_UNIT 3 "Troll Whelp" 7 6} {GUARDIAN}
+        {GENERIC_UNIT 3 "Troll Whelp" 27 23} {GUARDIAN}
 #endif
 #ifdef NORMAL
-        {GENERIC_UNIT 3 "Troll Whelp" 30 25}
+        {GENERIC_UNIT 3 "Troll Whelp" 27 23} {GUARDIAN}
 #endif
 
         [set_variables]
