autotools: disable strict compilation

--- a/configure.ac
+++ b/configure.ac
@@ -108,10 +108,10 @@ fi
 if test "x$strict" = "xyes"
 then
 #   Strict compilation for C files is disabled until somebody wants to clean them.
-#	CFLAGS="-Werror -Wno-unused -Wno-sign-compare $CFLAGS"
+	CFLAGS="-Wno-unused -Wno-sign-compare $CFLAGS"
 
 	# The current networking code breaks strict aliasing in g++ 4.5.
-	CXXFLAGS="-Werror -Wno-unused-parameter -Wno-strict-aliasing $CXXFLAGS"
+	CXXFLAGS="-Wno-unused-parameter -Wno-strict-aliasing $CXXFLAGS"
 fi
 
 # Make tests default in svn version
