--- a/configure.ac
+++ b/configure.ac
@@ -106,8 +106,8 @@ fi
 if test "x$strict" = "xyes"
 then
 #   Strict compilation for C files is disabled until somebody wants to clean them.
-#	CFLAGS="$CFLAGS -Werror -Wno-unused -Wno-sign-compare"
-	CXXFLAGS="$CXXFLAGS -Werror -Wno-unused -Wno-sign-compare"
+	CFLAGS="$CFLAGS -Wno-unused -Wno-sign-compare"
+	CXXFLAGS="$CXXFLAGS -Wno-unused -Wno-sign-compare"
 fi
 
 # Make tests default in svn version
