--- a/data/scenario-test.cfg
+++ b/data/scenario-test.cfg
@@ -870,10 +870,60 @@ Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg
             [/modifications]
         [/unit]
         [unit]
-            # Drain tester (for undead and default drain)
+            # Drain tester (for undead and default drain) and reverse heals tester
             x,y=21,7
             type="Lich"
             generate_name=yes
+	        [modifications]
+                [object]
+                    [effect]
+                        apply_to=new_ability
+                            [abilities]
+                                [heals]
+                                value=-4
+                                id=aura of death 4
+                                affect_enemies=yes
+                                name= _ "aura of seath ("4")"
+                                female_name= _ "female^aura of death ("4")"
+                                affect_self=no
+                                affect_allies=no
+                                poison=slowed
+                                [affect_adjacent]
+                                    adjacent=n,ne,se,s,sw,n
+				                [/affect_adjacent]
+                                [/heals]
+                            [/abilities]
+                    [/effect]
+                [/object]
+            [/modifications]
+        [/unit]
+        [unit]
+        # reverse heals tester
+        x,y=20,6
+        type="Ancient Lich"
+        generate_name=yes
+        [modifications]
+                [object]
+                    [effect]
+                        apply_to=new_ability
+                            [abilities]
+                                [heals]
+                                value=-8
+                                id=aura of death 8
+                                affect_enemies=yes
+                                name= _ "aura of seath ("8")"
+                                female_name= _ "female^aura of death ("8")"
+                                affect_self=no
+                                affect_allies=no
+                                poison=slowed
+                                [affect_adjacent]
+                                    adjacent=n,ne,se,s,sw,n
+				                [/affect_adjacent]
+                                [/heals]
+                            [/abilities]
+                    [/effect]
+                [/object]
+            [/modifications]
         [/unit]
         [unit]
             # Drain tester
