--- a/data/gui/window/preferences/02_hotkeys.cfg
+++ b/data/gui/window/preferences/02_hotkeys.cfg
@@ -64,7 +64,7 @@
 							id = "filter"
 							definition = "default"
 
-							tooltip = _ "Filters on addon description, version, type or author."
+							tooltip = _ "Filters on hotkey description."
 							{FITER_TEXT_BOX_HINT}
 						[/text_box]
 					[/column]
