--- a/data/scenario-test.cfg
+++ b/data/scenario-test.cfg
@@ -351,6 +351,8 @@ Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg
                                 female_name= "female^darkens"
                                 description= "darkens and stuff"
                                 affect_self=yes
+                                [affect_adjacent]
+                                [/affect_adjacent]
                             [/illuminates]
                         [/abilities]
                     [/effect]
