Tutorial S2: Hint that it's better to keep units about-to-level (#3683)
This backports 'Tutorial S2: "choose who gets the 16xp" is a topic for
the rookie campaigns' from 1.14.

--- a/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
+++ b/data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg
@@ -895,7 +895,14 @@ A full list of abilities and weapons specials, along with traits, may be found i
             [/variable]
         [/filter_condition]
 
-        {TALK_ABOUT Thrag ( _ "You are close to killing their leader! The unit who finishes him will gain 16 experience points because he is second level. Choose your attacking unit carefully!")}
+        {TALK_ABOUT Thrag ( _ "You are close to killing their leader! Because he is second level, the unit who finishes him will gain 16 experience points. In a campaign, it’s important to decide which units you want to advance, and give those units the best chances to gain experience.")}
+
+        [message]
+            speaker=narrator
+            caption= _ "You have almost finished the tutorial"
+            image=wesnoth-icon.png
+            message= _ "In a campaign you may have ten or even twenty scenarios to build your army, but this tutorial will conclude after you defeat Thrag."
+        [/message]
     [/event]
 
     # Any level unit near advancement
@@ -1163,7 +1170,12 @@ A full list of abilities and weapons specials, along with traits, may be found i
 
         [message]
             speaker=Galdrad
-            message= _ "You have beaten the orcs! You may want to try one of the novice-level campaigns next, such as <i>A Tale of Two Brothers</i>, <i>An Orcish Incursion</i>, or <i>The South Guard</i>. Konrad, Li’sar and Delfador are characters from <i>Heir to the Throne</i>. You can also refer to the in-game help browser if you ever need to refresh your memory on gameplay mechanics."
+            message= _ "You have beaten the orcs! You may want to try one of the rookie-level campaigns next, which include strategy hints. <i>A Tale of Two Brothers</i> is the easiest and is the recommended first campaign. In <i>An Orcish Incursion</i> you have an Elvish army, similarly to this tutorial, but with seven scenarios for your units to gain experience and advance levels."
+        [/message]
+        [message]
+            speaker=narrator
+            image=wesnoth-icon.png
+            message= _ "You can also refer to the in-game help browser if you ever need to refresh your memory on gameplay mechanics."
         [/message]
 
         {CLEAR_VARIABLE low_hp_unit_message,lhpu_msg_i}
