--- a/data/core/about.cfg
+++ b/data/core/about.cfg
@@ -1178,6 +1178,9 @@
         name = "Ely Levy (Nakee)"
     [/entry]
     [entry]
+        name = "equal-l2"
+    [/entry]
+    [entry]
         name = "Étienne Simon (ejls)"
     [/entry]
     [entry]
