Fix typo in menu_button: active icon was used instead of pressed icon
Icon [short_arrow_left_25-pressed.png] exists, but is not used anywhere.
Widgets in [menu_button_default.cfg] and [multimenu_button_default.cfg]
were using [short_arrow_left_25-active.png] for the "pressed" state.

--- a/data/core/about.cfg
+++ b/data/core/about.cfg
@@ -1169,6 +1169,9 @@
         name = "Duthlet"
     [/entry]
     [entry]
+        name = "Edward Chernenko"
+    [/entry]
+    [entry]
         name = "Ekdohibs"
     [/entry]
     [entry]
