support item_name= in [store_items]
we use it in SotA16 to make the scenario more robust against
[modification]s that might add [item]s for decoration.

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -1119,6 +1119,7 @@
 		name="store_items"
 		max=infinite
 		super="$action_wml/store_locations"
+		{SIMPLE_KEY item_name string}
 	[/tag]
 	[tag]
 		name="store_relative_direction"
