update CB projectfile

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -1177,6 +1177,8 @@
 		<Unit filename="../../src/utils/name_generator.hpp" />
 		<Unit filename="../../src/utils/name_generator_factory.cpp" />
 		<Unit filename="../../src/utils/name_generator_factory.hpp" />
+		<Unit filename="../../src/utils/parse_network_address.cpp" />
+		<Unit filename="../../src/utils/parse_network_address.hpp" />
 		<Unit filename="../../src/utils/reference_counter.hpp" />
 		<Unit filename="../../src/utils/scope_list.hpp" />
 		<Unit filename="../../src/utils/smart_list.hpp" />
