--- a/projectfiles/VC14/wesnoth.vcxproj.filters
+++ b/projectfiles/VC14/wesnoth.vcxproj.filters
@@ -1554,6 +1554,9 @@
     <ClCompile Include="..\..\src\desktop\windows_battery_info.cpp">
       <Filter>Desktop</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\utils\parse_network_address.cpp">
+      <Filter>utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\addon\client.hpp">
@@ -3032,6 +3035,9 @@
     </ClInclude>
     <ClInclude Include="..\..\src\desktop\windows_battery_info.hpp">
       <Filter>Desktop</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\utils\parse_network_address.hpp">
+      <Filter>utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
