TRoW S9: unhide yeti side when they appear
[ci skip]

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg
@@ -130,8 +130,14 @@
     [side]
         side=5
         no_leader=yes
-        team_name=monsters
-        user_team_name= _ "Monsters"
+        team_name=yetis
+        user_team_name= _ "Yetis"
+        hidden=yes
+        # set these values as they will be displayed in the status table
+        gold=0
+        income=-2
+        village_gold=0
+        village_support=0
         [ai]
             village_value=0
         [/ai]
@@ -537,6 +543,11 @@
             x=15-27
             y=16-25
         [/filter]
+
+        [modify_side]
+            side=5
+            hidden=no
+        [/modify_side]
         [move_unit_fake]
             type=Yeti
             side=4
