TRoW S5: remove trailing space
closes #3799
[ci skip]

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg
@@ -234,7 +234,7 @@
         [/message]
         [message]
             speaker=Prince Haldric
-            message= _ "We will help. " + {WHISPER _"quietly^Be careful with the trees."}
+            message= _ "We will help." + " " + {WHISPER _"quietly^Be careful with the trees."}
         [/message]
         [message]
             speaker=Burin the Lost
