TRoW: better lighthouse illumination simullation
(it's not real illumination and can thus stack with Mage of Lights at night)
closes #3808
[ci skip]

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/12_A_Final_Spring.cfg
@@ -159,28 +159,45 @@
         [/ai]
     [/side]
 
-    #Time Areas broken - no visible change, use a halo with it
-    [time_area]
-        x=1,1,1,2,2,2,2,3,3,3,3,3,4,4,4,4,5,5,5             #,6,6
-        y=17,18,19,16,17,18,19,16,17,18,19,20,16,17,18,19,17,18,19  #,17,18
-        {MORNING}
-        {MORNING}
-        {AFTERNOON}
-        {AFTERNOON}
-        {DUSK}
-        {DAWN}
-    [/time_area]
-
     [event]
         name=prestart
 
-        #{PLACE_IMAGE (scenery/lighthouse.png) 3 18}
         [item]
-            x=3
-            y=18
+            x,y=3,18
             image=scenery/lighthouse.png
             halo=halo/lighthouse-aura.png
         [/item]
+
+        # Time Area for the lighthouse, simulating illumination
+        [time_area]
+            x,y=3,18
+            radius=2
+            id=lighthouse
+            # Schedule using the red, green, blue values from other ToDs,
+            # but overriding the image to fit the current ToD, and applying a bonus.
+            {MORNING} # (actually dawn)
+            [+time]
+                image=misc/time-schedules/default/schedule-dawn.png~BLIT(misc/tod-bright.png)
+                lawful_bonus=25
+            [/time]
+            {MORNING}
+            {AFTERNOON}
+            {AFTERNOON} # (actually dusk)
+            [+time]
+                image=misc/time-schedules/default/schedule-dusk.png~BLIT(misc/tod-bright.png)
+                lawful_bonus=25
+            [/time]
+            {DAWN} # (actually 1st night)
+            [+time]
+                image=misc/time-schedules/default/schedule-firstwatch.png~BLIT(misc/tod-bright.png)
+                lawful_bonus=0
+            [/time]
+            {DAWN} # (actually 2nd night)
+            [+time]
+                image=misc/time-schedules/default/schedule-secondwatch.png~BLIT(misc/tod-bright.png)
+                lawful_bonus=0
+            [/time]
+        [/time_area]
 
         {PLACE_IMAGE ("units/transport/transport-galleon.png~RC(magenta>blue)") 17 24}
         {PLACE_IMAGE ("units/transport/transport-galleon.png~RC(magenta>blue)") 20 22}
