TRoW: better lighthouse illumination simullation
(it's not real illumination and can thus stack with Mage of Lights at night)
closes #3808
[ci skip]

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/08_Clearwater_Port.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/08_Clearwater_Port.cfg
@@ -166,32 +166,50 @@
         {INCOME 5 10 15}
     [/side]
 
-    #Time Areas broken - no visible change, use a halo with it
-    [time_area]
-        x=34,35,36,36,36,35,34,33,32,32,32,33,34,35,35,34,33,33,34  #,37,37,31,31
-        y= 6, 7, 7, 8, 9,10,10,10, 9, 8, 7, 7, 7, 8, 9, 9, 9, 8, 8  #,8,9,8,9
-        {MORNING}
-        {MORNING}
-        {AFTERNOON}
-        {AFTERNOON}
-        {DUSK}
-        {DAWN}
-    [/time_area]
-
     [event]
         name=prestart
+
+        # Time Area for the lighthouse, simulating illumination
+        [time_area]
+            x,y=34,8
+            radius=2
+            id=lighthouse
+            # Schedule using the red, green, blue values from other ToDs,
+            # but overriding the image to fit the current ToD, and applying a bonus.
+            {MORNING} # (actually dawn)
+            [+time]
+                image=misc/time-schedules/default/schedule-dawn.png~BLIT(misc/tod-bright.png)
+                lawful_bonus=25
+            [/time]
+            {MORNING}
+            {AFTERNOON}
+            {AFTERNOON} # (actually dusk)
+            [+time]
+                image=misc/time-schedules/default/schedule-dusk.png~BLIT(misc/tod-bright.png)
+                lawful_bonus=25
+            [/time]
+            {DAWN} # (actually 1st night)
+            [+time]
+                image=misc/time-schedules/default/schedule-firstwatch.png~BLIT(misc/tod-bright.png)
+                lawful_bonus=0
+            [/time]
+            {DAWN} # (actually 2nd night)
+            [+time]
+                image=misc/time-schedules/default/schedule-secondwatch.png~BLIT(misc/tod-bright.png)
+                lawful_bonus=0
+            [/time]
+        [/time_area]
+
+        [item]
+            x,y=34,8
+            image=scenery/lighthouse.png
+            halo=halo/lighthouse-aura.png
+        [/item]
 
         {PLACE_IMAGE (scenery/signpost.png) 33 8}
         {PLACE_IMAGE (scenery/signpost.png) 8 17}
         {PLACE_IMAGE (scenery/signpost.png) 1 10}
         {PLACE_IMAGE (scenery/signpost.png) 36 18}
-
-        [item]
-            x=34
-            y=8
-            image=scenery/lighthouse.png
-            halo=halo/lighthouse-aura.png
-        [/item]
 
         [recall]
             id=Lady Jessene
