DiD S7: write schedule more compact
[ci skip]

--- a/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
+++ b/data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg
@@ -11,10 +11,13 @@
 #ifdef EASY
     {FIRST_WATCH_HOUR2}
     {FIRST_WATCH_HOUR3}
+#endif
+#ifndef HARD
     {FIRST_WATCH_HOUR3}
     {FIRST_WATCH_HOUR3}
     {FIRST_WATCH_HOUR4}
     {FIRST_WATCH_HOUR4}
+#endif
     {FIRST_WATCH_HOUR4}
     {MIDNIGHT_HOUR}
     {MIDNIGHT_HOUR}
@@ -38,63 +41,6 @@
     {SECOND_WATCH_HOUR6}
     {SECOND_WATCH_HOUR6}
     {DAWN_HOUR}
-#endif
-
-#ifdef NORMAL
-    {FIRST_WATCH_HOUR3}
-    {FIRST_WATCH_HOUR3}
-    {FIRST_WATCH_HOUR4}
-    {FIRST_WATCH_HOUR4}
-    {FIRST_WATCH_HOUR4}
-    {MIDNIGHT_HOUR}
-    {MIDNIGHT_HOUR}
-    {MIDNIGHT_HOUR}
-    {SECOND_WATCH_HOUR1}
-    {SECOND_WATCH_HOUR1}
-    {SECOND_WATCH_HOUR1}
-    {SECOND_WATCH_HOUR2}
-    {SECOND_WATCH_HOUR2}
-    {SECOND_WATCH_HOUR2}
-    {SECOND_WATCH_HOUR3}
-    {SECOND_WATCH_HOUR3}
-    {SECOND_WATCH_HOUR3}
-    {SECOND_WATCH_HOUR4}
-    {SECOND_WATCH_HOUR4}
-    {SECOND_WATCH_HOUR4}
-    {SECOND_WATCH_HOUR5}
-    {SECOND_WATCH_HOUR5}
-    {SECOND_WATCH_HOUR5}
-    {SECOND_WATCH_HOUR6}
-    {SECOND_WATCH_HOUR6}
-    {SECOND_WATCH_HOUR6}
-    {DAWN_HOUR}
-#endif
-
-#ifdef HARD
-    {FIRST_WATCH_HOUR4}
-    {MIDNIGHT_HOUR}
-    {MIDNIGHT_HOUR}
-    {MIDNIGHT_HOUR}
-    {SECOND_WATCH_HOUR1}
-    {SECOND_WATCH_HOUR1}
-    {SECOND_WATCH_HOUR1}
-    {SECOND_WATCH_HOUR2}
-    {SECOND_WATCH_HOUR2}
-    {SECOND_WATCH_HOUR2}
-    {SECOND_WATCH_HOUR3}
-    {SECOND_WATCH_HOUR3}
-    {SECOND_WATCH_HOUR3}
-    {SECOND_WATCH_HOUR4}
-    {SECOND_WATCH_HOUR4}
-    {SECOND_WATCH_HOUR4}
-    {SECOND_WATCH_HOUR5}
-    {SECOND_WATCH_HOUR5}
-    {SECOND_WATCH_HOUR5}
-    {SECOND_WATCH_HOUR6}
-    {SECOND_WATCH_HOUR6}
-    {SECOND_WATCH_HOUR6}
-    {DAWN_HOUR}
-#endif
 
     {SCENARIO_MUSIC       elvish-theme.ogg}
     {EXTRA_SCENARIO_MUSIC wanderer.ogg}
