--- a/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
+++ b/data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg
@@ -564,10 +564,27 @@
             speaker=Hadlin  # wmllint: ignore
             message= _ "Who goes there?"
         [/message]
-        [message]
-            speaker=Alanin
-            message= _ "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a mission in the northlands, and now elvish horsemen are chasing me. I barely evaded them."
-        [/message]
+        {IF_VAR unit.type}
+        [if]
+            [variable]
+                name=unit.type
+                equals=Dragoon
+            [/variable]
+            [then]
+                [message]
+                    speaker=Alanin
+                    # po: dragoon = his unit type
+                    message= _ "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a mission in the northlands, and now elvish horsemen are chasing me. I barely evaded them."
+                [/message]
+            [/then]
+            [else]
+                [message]
+                    speaker=Alanin
+                    # po: cavalier = his unit type
+                    message= _ "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a mission in the northlands, and now elvish horsemen are chasing me. I barely evaded them."
+                [/message]
+            [/else]
+        [/if]
         [message]
             speaker=Hadlin  # wmllint: ignore
             message= _ "I see. Well, come on in. I doubt they would be able to capture this fort, even if they did want to start a war, which I doubt."
