SotBE S6: discover units placed with lua
The engine does not do this by itself
(which would be a better soultion)

closes #3813
[ci skip]

--- a/data/campaigns/Son_Of_The_Black_Eye/utils/utils.cfg
+++ b/data/campaigns/Son_Of_The_Black_Eye/utils/utils.cfg
@@ -216,10 +216,12 @@ function wesnoth.custom_synced_commands.ship_unload(cfg)
 
 	local l2_type = helper.rand('Swordsman,Javelineer,Pikeman')
 	wesnoth.put_unit({ side = wesnoth.current.side, type = l2_type, moves = 2 }, locs[1].x, locs[1].y)
+	wesnoth.add_known_unit(l2_type)
 
 	for i = 2, #locs do
 		local l1_type = helper.rand('Fencer,Mage,Cavalryman,Bowman,Spearman')
 		wesnoth.put_unit({ side = wesnoth.current.side, type = l1_type, moves = 2 }, locs[i].x, locs[i].y)
+		wesnoth.add_known_unit(l1_type)
 	end
 end
 
