TRoW: keep unit alive until storing
[ci skip]

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg
@@ -349,11 +349,12 @@
                         message= _ "Arrogant fools! (<i>Reaches into pocket</i>) <i>Poof</i>!"
                     [/message]
 
-                    {FULL_HEAL (id=Lady Outlaw)}
-
                     [hide_unit]
                         id=Wesfolk Leader
                     [/hide_unit]
+
+                    # healing, so the unit is not removed after this event
+                    {FULL_HEAL (id=Wesfolk Leader)}
 
                     [set_variable]
                         name=have_lady
@@ -457,18 +458,25 @@
 
         {CLEAR_VARIABLE wesfolk_leader_store}
 
-        [store_unit]
-            [filter]
+        [if]
+            [have_unit]
                 id=Wesfolk Leader
-            [/filter]
+            [/have_unit]
+            [then]
+                [store_unit]
+                    [filter]
+                        id=Wesfolk Leader
+                    [/filter]
 
-            variable=lady_store
-        [/store_unit]
+                    variable=lady_store
+                [/store_unit]
 
-        {VARIABLE lady_store.id (Lady Outlaw)}
-        {VARIABLE lady_store.name ( _ "Lady Outlaw")}
-        {VARIABLE lady_store.canrecruit no}
-        {VARIABLE lady_store.side 1}
+                {VARIABLE lady_store.id (Lady Outlaw)}
+                {VARIABLE lady_store.name ( _ "Lady Outlaw")}
+                {VARIABLE lady_store.canrecruit no}
+                {VARIABLE lady_store.side 1}
+            [/then]
+        [/if]
     [/event]
 [/scenario]
 
