TRoW S7 (Cutscene): Trees are allied
closes #3806
[ci skip]

--- a/data/campaigns/The_Rise_Of_Wesnoth/scenarios/07_Return_to_Oldwood.cfg
+++ b/data/campaigns/The_Rise_Of_Wesnoth/scenarios/07_Return_to_Oldwood.cfg
@@ -4,6 +4,7 @@
     next_scenario=08_Clearwater_Port
     name= _ "Return to Oldwood"
     map_data="{campaigns/The_Rise_Of_Wesnoth/maps/05_The_Oldwood.map}"
+    victory_when_enemies_defeted=no
     turns=1
     theme=Cutscene_Minimal
 
@@ -34,7 +35,7 @@
         name= _ "Talodulborentan"
         side=2
         canrecruit=no
-        team_name=treefolk
+        team_name=treefolk,Haldric
         user_team_name=_"Treefolk"
     [/side]
 
@@ -44,7 +45,7 @@
         name= _ "Gullatendronnorbum"
         side=3
         canrecruit=no
-        team_name=treefolk
+        team_name=treefolk,Haldric
         user_team_name=_"Treefolk"
     [/side]
 
@@ -55,7 +56,7 @@
         name= _ "Elilmaldur-Rithrandil"
         profile="portraits/rithrandil-winter.png"
         canrecruit=yes
-        team_name=treefolk
+        team_name=treefolk,Haldric
         user_team_name=_"Treefolk"
     [/side]
 
