Explicitly link to GObject (should fix #3840)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -87,6 +87,7 @@ set(game-external-libs
 	${SDLMIXER_LIBRARY}
 	${ANA_LIBRARIES}
 	${SDLTTF_LIBRARY}
+	${GOBJECT_LIBRARIES}
 	${PANGOCAIRO_LIBRARIES}
 	${FONTCONFIG_LIBRARIES}
 	${LIBDBUS_LIBRARIES}
