--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,6 +80,7 @@ set(game-external-libs
 	${sdl_image-lib}
 	${sdl_mixer-lib}
 	${sdl_ttf-lib}
+	${GOBJECT_LIBRARIES}
 	${PANGOCAIRO_LIBRARIES}
 	${FONTCONFIG_LIBRARIES}
 	${LIBDBUS_LIBRARIES}
