Explicitly link to GObject (should fix #3840)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -68,6 +68,7 @@ set( game-external-libs
     ${SDLMIXER_LIBRARY}
     ${SDLNET_LIBRARY}
     ${SDLTTF_LIBRARY}
+	${GOBJECT_LIBRARIES}
     ${PANGOCAIRO_LIBRARIES}
     ${FONTCONFIG_LIBRARIES}
     ${LUA_LIBRARIES}
