--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -194,6 +194,7 @@ if(ENABLE_GAME)
 
 	if(NOT MSVC)
 		find_package( PkgConfig REQUIRED )
+		pkg_check_modules( GOBJECT REQUIRED gobject-2.0 )
 		pkg_check_modules( PANGOCAIRO REQUIRED pangocairo>=1.14.8 )
 		pkg_check_modules( FONTCONFIG REQUIRED fontconfig>=2.4.1 )
 	endif(NOT MSVC)
